--- a/aula21.html
+++ b/aula21.html
@@ -9,12 +9,7 @@
 </head>
 
 <body>
-    <script>
-        var num = 10;
-
-        if (num == 10) {
-            document.write(num)
-        }
+    <script src="aula21.js">
     </script>
 </body>
 
