--- a/aula22.html
+++ b/aula22.html
@@ -9,19 +9,7 @@
 </head>
 
 <body>
-    <script>
-        var a;
-        try {
-            a = prompt('Digite um número de 1 a 10:');
-            if (a > 10 || a < 1) {
-                throw new Error('Número inválido, o valor deve ser maior ou igual a 10');
-            }
-            document.write(a)
-        } catch (e) {
-            document.write('Erro: ' + e.message);
-        } finally {
-            document.write('<br> Fim do tratamento')
-        }
+    <script src="aula22.js">
     </script>
 </body>
 
