--- a/aula23.html
+++ b/aula23.html
@@ -16,17 +16,7 @@
 
     <div id='caixa'></div>
 
-    <script>
-        var text = document.getElementById('txt');
-        text.style.color = "red";
-        text.style.fontSize = "50px";
-
-        var cx = document.getElementById('caixa');
-        cx.style.border = "1px solid black";
-        cx.style.width = "300px";
-        cx.style.height = "300px";
-        cx.style.backgroundColor = "gray";
-        cx.style.borderRadius = "10px";
+    <script src="aula23.js">
     </script>
 
 </body>
