--- a/aula24.html
+++ b/aula24.html
@@ -12,10 +12,7 @@
     <p id="text">CFB Cursos</p>
     <input type="text" id="cxtexto" value="CFB Cursos">
 
-    <script>
-        document.getElementById("cxtexto").value = "Curso de Javascript";
-        var cxt = document.getElementById("cxtexto");
-        var txt = document.getElementById("text").innerHTML = "Aula 24 - innerHTML";
+    <script src="aula24.js">
     </script>
 </body>
 
