--- a/aula25.html
+++ b/aula25.html
@@ -17,16 +17,7 @@
 
     <hr>
 
-    <script>
-        var tagsP = document.getElementsByTagName("p");
-
-        for (var i = 0; i < tagsP.length; i++) {
-            tagsP[i].style.color = 'Red';
-        }
-
-        var a = document.getElementsByTagName("*");
-
-        a[6].style.backgroundColor = "black";
+    <script src="aula25.js">
     </script>
 </body>
 
