--- a/aula26.html
+++ b/aula26.html
@@ -52,12 +52,7 @@
 
     <hr>
 
-    <script>
-        // div (tag pai) > (indica a tag filho) p (tag filho)
-        var elementos = document.querySelectorAll("p, h1");
-        for (var i = 0; i < elementos.length; i++) {
-            elementos[i].style.color = "green";
-        }
+    <script src="aula26.js">
     </script>
 </body>
 
