Alterando src javascript

--- a/HTML/aula24.html
+++ b/HTML/aula24.html
@@ -12,7 +12,7 @@
     <p id="text">CFB Cursos</p>
     <input type="text" id="cxtexto" value="CFB Cursos">
 
-    <script src="aula24.js">
+    <script src="../HTML/aula24.js">
     </script>
 </body>
 
