--- a/HTML/aula27.html
+++ b/HTML/aula27.html
@@ -7,20 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <style>
-        label {
-            display: block;
-        }
-        
-        input {
-            display: block;
-        }
-        
-        input[type=submit],
-        label {
-            margin-top: 10px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../CSS/aula27.css">
 </head>
 
 <body>
